--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -47,7 +47,7 @@ body {
       @media (min-width: $tabletSize) {
         padding-top: 90px;
         background: url(https://2019.kochi.wordcamp.org/files/2019/09/WCK_2019_inner_header_bg.jpg)
-          bottom center no-repeat !important;
+          bottom right no-repeat !important;
         background-size: cover;
       }
       .custom-logo-link {
